<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_new_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:theme="@style/EditTextTheme"
        android:background="@null"
        android:inputType="textCapSentences"
        android:maxLength="96"
        android:fontFamily="@font/roboto"
        android:textColor="@color/colorAccent"
        android:hint="@string/title_item_hint"
        android:textColorHint="@color/colorSecondaryVariant"
        android:imeOptions="flagNoExtractUi" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="4dp">

        <Button
            android:id="@+id/button_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            android:background="@drawable/btn_rounded"
            android:backgroundTint="@color/colorSecondary"
            android:fontFamily="@font/roboto"
            android:text="@string/title_due_date"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:drawableStart="@drawable/ic_calendar"
            android:drawablePadding="4dp" />

        <Button
            android:id="@+id/button_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@+id/button_due_date"
            android:padding="8dp"
            android:background="@drawable/btn_rounded"
            android:backgroundTint="@color/colorSecondary"
            android:fontFamily="@font/roboto"
            android:text="@string/title_reminder"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:drawableStart="@drawable/ic_alarm_clock"
            android:drawablePadding="4dp" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/roboto"
            android:text="@string/action_save"
            android:textAllCaps="false"
            android:textColor="@color/colorSecondaryVariant"
            android:textSize="18sp" />

    </RelativeLayout>

</LinearLayout>
