<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    android:orientation="vertical"
    tools:context=".activities.NoteActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:elevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_note_due_date"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_toStartOf="@id/button_note_reminder"
                android:layout_marginEnd="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:background="@drawable/btn_rounded"
                android:backgroundTint="@color/colorTertiary"
                android:fontFamily="@font/roboto"
                android:text="@string/title_due_date"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:drawableStart="@drawable/ic_calendar_small"
                android:drawablePadding="4dp"
                android:onClick="showDatePickerDialog" />

            <Button
                android:id="@+id/button_note_reminder"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_toStartOf="@id/image_delete"
                android:layout_marginEnd="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:background="@drawable/btn_rounded"
                android:backgroundTint="@color/colorTertiary"
                android:fontFamily="@font/roboto"
                android:text="@string/title_reminder"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:drawableStart="@drawable/ic_alarm_clock_small"
                android:drawablePadding="4dp"
                android:onClick="showTimePickerDialog" />

            <ImageButton
                android:id="@+id/image_delete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                android:layout_alignParentEnd="true"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_delete"
                android:onClick="deleteNote" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>
    
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    
        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="16dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_note_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:theme="@style/EditTextTheme"
                    android:background="@null"
                    android:backgroundTint="@color/colorTertiary"
                    android:fontFamily="@font/roboto"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="96"
                    android:textColor="@color/colorAccent"
                    android:hint="@string/title_title_hint"
                    android:textColorHint="@color/colorSecondaryVariant"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/edit_note_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:theme="@style/EditTextTheme"
                    android:background="@drawable/dialog_rounded"
                    android:backgroundTint="@color/colorTertiary"
                    android:fontFamily="@font/roboto"
                    android:inputType="textCapSentences|textMultiLine"
                    android:textColor="@color/colorAccent"
                    android:textColorHighlight="@color/colorSecondaryVariant"
                    android:hint="@string/title_note_text_hint"
                    android:textColorHint="@color/colorSecondaryVariant"
                    android:textSize="18sp" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>