<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@color/colorSecondary"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:gravity="start|center_vertical"
                android:paddingStart="0dp"
                android:paddingEnd="8dp"
                android:background="@drawable/btn_rounded_square"
                android:fontFamily="@font/roboto"
                android:text="@string/title_new_list"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:drawableStart="@drawable/ic_add"
                android:drawablePadding="4dp"
                android:onClick="showNewListDialog"
                tools:ignore="RelativeOverlap" />

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:background="?android:selectableItemBackgroundBorderless"
                android:src="@drawable/ic_search"
                android:onClick="startSearchActivity"
                android:contentDescription="@string/title_search_hint" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/title_quick_access"
                    android:textSize="24sp" />

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            android:layout_width="128dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginStart="16dp"
                            app:cardBackgroundColor="@android:color/transparent">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/card_upcoming"
                                    android:layout_width="128dp"
                                    android:layout_height="128dp"
                                    android:foreground="?android:attr/selectableItemBackground"
                                    android:clickable="true"
                                    android:focusable="true"
                                    app:cardBackgroundColor="@color/holoPurpleDark"
                                    app:cardCornerRadius="8dp">

                                    <ImageView
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_centerInParent="true"
                                        android:gravity="center"
                                        android:padding="48dp"
                                        android:src="@drawable/ic_alarm_clock" />

                                </androidx.cardview.widget.CardView>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/card_upcoming"
                                    android:layout_marginTop="4dp"
                                    android:gravity="center"
                                    android:text="@string/title_upcoming"
                                    android:fontFamily="@font/roboto"
                                    android:textSize="18sp"
                                    android:maxLines="1"
                                    android:ellipsize="end" />

                            </RelativeLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="128dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginStart="16dp"
                            app:cardBackgroundColor="@android:color/transparent">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/card_notes"
                                    android:layout_width="128dp"
                                    android:layout_height="128dp"
                                    android:foreground="?android:attr/selectableItemBackground"
                                    android:clickable="true"
                                    android:focusable="true"
                                    app:cardBackgroundColor="@color/holoOrangeLight"
                                    app:cardCornerRadius="8dp">

                                    <ImageView
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_centerInParent="true"
                                        android:gravity="center"
                                        android:padding="48dp"
                                        android:src="@drawable/ic_notes" />

                                </androidx.cardview.widget.CardView>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/card_notes"
                                    android:layout_marginTop="4dp"
                                    android:gravity="center"
                                    android:text="@string/title_notes"
                                    android:fontFamily="@font/roboto"
                                    android:textSize="18sp"
                                    android:maxLines="1"
                                    android:ellipsize="end" />

                            </RelativeLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="128dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginStart="16dp"
                            app:cardBackgroundColor="@android:color/transparent">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/card_favorites"
                                    android:layout_width="128dp"
                                    android:layout_height="128dp"
                                    android:foreground="?android:attr/selectableItemBackground"
                                    android:clickable="true"
                                    android:focusable="true"
                                    app:cardBackgroundColor="@color/holoBlueDark"
                                    app:cardCornerRadius="8dp">

                                    <ImageView
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_centerInParent="true"
                                        android:gravity="center"
                                        android:padding="48dp"
                                        android:src="@drawable/ic_star" />

                                </androidx.cardview.widget.CardView>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/card_favorites"
                                    android:layout_marginTop="4dp"
                                    android:gravity="center"
                                    android:fontFamily="@font/roboto"
                                    android:text="@string/title_favorites"
                                    android:textSize="18sp"
                                    android:maxLines="1"
                                    android:ellipsize="end" />

                            </RelativeLayout>

                        </androidx.cardview.widget.CardView>

                        <Space
                            android:layout_width="16dp"
                            android:layout_height="match_parent" />

                    </LinearLayout>

                </HorizontalScrollView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="32dp"
                    android:paddingBottom="4dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/title_your_list"
                    android:textSize="24sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_lists"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    tools:listitem="@layout/item_list" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>